[gd_scene load_steps=3 format=3 uid="uid://bxvw8y7qkqx7"]

[ext_resource type="Script" uid="uid://cdgatou53h8l8" path="res://actors/JumpPad.gd" id="1_jump_pad"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pad"]
size = Vector2(32, 16)

[node name="JumpPad" type="Area2D"]
script = ExtResource("1_jump_pad")

[node name="PadSprite" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="PadLabel" type="Label" parent="."]
offset_left = -16.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 12
text = "⬆️"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pad")
